@@ -4,3 +4,9 @@ Planned features:
 * select target folder for screenshots
 * i18n (internationalization support)
 * sound emulation
+
+bug #1529250: oh, and a little *Wish List:
+1. Taking animated screenshots using TiEmu (integrated)
+2. Allowing the user to change the folder after you use
+F10 to transfer file from the pc to the emulator
+3. Allow Drag and Drop, like VTI
