@@ -24,6 +24,9 @@ SubVersion: $Id$
 	- [kevin] $2166: fixed FlashROM identifiers so the HW4 8 MB FlashROM gets detected properly by AMS 3.10
 	- [kevin] $2168: fixed recfile crash when receiving something which is not a valid variable
 	- [kevin] $2168: fixed ti68k_linkport_ready to reset the link so TiEmu doesn't try to receive a "file" sometimes
+	- [roms]  $2177: fixed invalid keyval mask in keyboard press event routine
+					 removed Gdk_Caps_Lock capture (already capture by TI keyboard)
+					 added accelator key: Pause => Screenshot Now!
 
 - 10/05/2006, version 2.81:
 	- [roms] $2059: renamed 'code/source' window into 'disassembly'
